# advent-of-code

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: generate_year.py  main.py  run.sh
src/aoc/: constants.py  models.py  utils.py
src/aoc/2015/day01/: solution.py
src/aoc/2015/day02/: solution.py
src/aoc/2015/day03/: solution.py
src/aoc/2015/day04/: solution.py
src/aoc/2015/day05/: solution.py
src/aoc/2015/day06/: solution.py
src/aoc/2015/day07/: solution.py
src/aoc/2015/day08/: solution.py
src/aoc/2015/day09/: solution.py
src/aoc/2015/day10/: solution.py
src/aoc/2015/day11/: solution.py
src/aoc/2015/day12/: solution.py
src/aoc/2015/day13/: solution.py
src/aoc/2015/day14/: solution.py
src/aoc/2015/day15/: solution.py
src/aoc/2015/day16/: solution.py
src/aoc/2015/day17/: solution.py
src/aoc/2015/day18/: solution.py
src/aoc/2015/day19/: solution.py
src/aoc/2015/day20/: solution.py
src/aoc/2015/day21/: solution.py
src/aoc/2015/day22/: solution.py
src/aoc/2015/day23/: solution.py
src/aoc/2015/day24/: solution.py
src/aoc/2015/day25/: solution.py
src/aoc/2016/: TODO
src/aoc/2016/day01/: solution.py
src/aoc/2016/day02/: solution.py
src/aoc/2016/day03/: solution.py
src/aoc/2016/day04/: solution.py
src/aoc/2016/day05/: solution.py
src/aoc/2016/day06/: solution.py
src/aoc/2016/day07/: solution.py
src/aoc/2016/day08/: solution.py
src/aoc/2016/day09/: solution.py
src/aoc/2016/day10/: solution.py
src/aoc/2016/day11/: solution.py
src/aoc/2016/day12/: solution.py
src/aoc/2025/: TODO
(+105 files in other folders)
