[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["enrico <enrico.dsf@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc", from = "src"}]

[tool.poetry.dependencies]
python = "3.13.*"
ruff = "^0.8.5"
click = "^8.1.8"
pydantic = "^2.10.4"
mypy = "^1.14.1"


[tool.poetry.scripts]
aoc = "scripts.main:main"
generate = "scripts.generate_year:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
