[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["enrico <enrico.dsf@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc", from = "src"}]

[tool.poetry.dependencies]
python = "3.13.*"
ruff = "^0.8.5"
click = "^8.1.8"
mypy = "^1.14.1"
tqdm = "^4.67.1"
pydantic = "^2.12.5"
scipy = "^1.16.3"

[tool.poetry.scripts]
solve = "scripts.solve:main"
generate = "scripts.generate_year:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
